--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es"><meta http-equiv="Content-Type" content="text/html" meta >  
 <link rel="stylesheet" type="text/css" href="estilos/estilo.css">
 <head>
-	<title>Pedido</title>
+	<title>Inicio</title>
 </head>
 <body>
 	<img src="imagenes/Cabecera_01.png" alt="Imagen principal">
